[package]
name = "sokoban"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
glam = { version = "0.23.0", features = ["mint"] }
specs = { version = "0.17.0", features = ["specs-derive"] }
